Fix possible NULL pointer deref in preproc.c

Fixes bug #757617.

https://bugzilla.gnome.org/show_bug.cgi?id=757617